--- a/popup.html
+++ b/popup.html
@@ -5,9 +5,9 @@
 	<script type="text/javascript" src="jquery.js"></script>
 </head>
 <body>
-<textarea id="complaint" rows="6", cols="40"></textarea>
+<textarea id="complaint" rows="6", cols="40" placeholder="Enter Symptoms Here"></textarea>
 <input type="button" name="send" value="Send" id="send">
-<textarea id="result" rows="6", cols="40"></textarea>
+<textarea id="result" rows="6", cols="40" readonly="readonly"></textarea>
 <script type="text/javascript" src="request.js"></script>
 </body>
 </html>
